app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  labels:
    app: devops-app
spec:
  selector:
    app: devops-app
  ports:
  - port: 80
    targetPort: 8080
